- Consult org-link-abbrev-alist when creating links ([[https://github.com/kisaragi-hiu/org-roam/commit/15fecc6da54edc4d0f58458b81d0ef7132033f8c][15fecc6]])
- Replace org-roam-dailies with kisaragi-diary (originally living in my config, now with some changes) ([[https://github.com/kisaragi-hiu/org-roam/commit/a6021db958f4a3c449a7fd1564e0b0c2b78cfda4][a6021db]], [[https://github.com/kisaragi-hiu/org-roam/commit/011b6087626471b0b4e46dfd3e5b7305166e0b3b][011b608]], [[https://github.com/kisaragi-hiu/org-roam/commit/9b744249ba292e9b8b1ad696e96c471859231681][9b74424]])
  - Also move =k/new-diary-entry= in here (as =kisaragi-diary/new-entry=)
  - Add a user option for where to look for diary entries (instead of hard-coding it to a variable in my Emacs config)
  - Change the naming scheme for functions and variables
  - Merge necessary helpers (=k/today=) into this repository
- Speed up =org-roam--list-files-rg= by using =call-process= directly and not through =shell-command=
- Remove =org-roam--list-files-find=
- Add support for indexing and showing links in titles
  - Not highlighted in Org mode, but will show up as backlinks.
- Overhaul the backlinks buffer somewhat
  - When you open another note then go back to the previous one, the backlinks buffer now remembers where your cursor was.
  - Link context is also saved and displayed
- Merge org-roam-bibtex 0.4 ([[https://github.com/org-roam/org-roam-bibtex/commit/5236917e1d8a4f88daadacc690248854f53facb4][5236917]]) in here
  - Don't format field values in APA style
  - Inject the =url= key in the capture template
- Support plain strings in =ROAM_KEY= like ~#+roam_key: miman2017~
- Slug styles are defined in =kisaragi-notes/slug-replacements= now
- Replace =org-protocol://roam-ref= and =org-protocol://roam-file= handlers with =org-protocol://notes=, which supports =file= and =key= arguments
- Tag sources is now specified as a list of extraction functions and not as symbols.